--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-jss": "^10.10.0",
     "react-scripts": "5.0.1",
+    "react-tooltip": "^5.13.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
